<resources>
    <string name="app_name">Connect 4</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="impossible_movement_title">Impossible movement</string>
    <string name="impossible_movement_message">The box is occupied</string>
    <string name="ok">OK</string>

    <string name="new_game">New Game</string>

    <string name="more_info_app">More info</string>
    <string name="more_info_message">App developed by Luis Fernando Jimenez de Jesus</string>

    <string name="player1_txt">Player 1</string>
    <string name="player2_txt">Player 2</string>

    <string name="nick_name">Nick name</string>
    <string name="play_txt">Play</string>
    <string name="cancel_txt">Cancel</string>

    <string name="nickname_are_required_msg">Nicknames are required</string>
    <string name="nickname_length_msg">The nickname must have at most 9 characters</string>

    <string name="txt_on_turn">ON TURN</string>
    <string name="txt_restart_game">RESTART GAME</string>
    <string name="txt_restart_counter">RESTART GAMES AND VICTORIES COUNTER </string>

    <string name="option_return_to_main_menu">Return to main menu</string>
    <string name="option_cancel">Cancel</string>
    <string name="txt_return_to_menu">Game progress will be lost if you return to the main menu</string>

</resources>