<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:cardCornerRadius="45dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/player1_txt"
            android:textAlignment="center"
            android:textColor="@color/app_text_new_game_menu"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/player2_txt"
            android:textAlignment="center"
            android:textColor="@color/app_text_new_game_menu"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_border_no_color_background"
            android:backgroundTint="#B92818FD"
            android:ems="10"
            android:hint="@string/nick_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_border_no_color_background"
            android:backgroundTint="@color/app_blue_color"
            android:ems="10"
            android:hint="@string/nick_name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView16"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2">

            <FrameLayout
                android:id="@+id/containerRedTokenPlayer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/app_gray_color">

                <androidx.cardview.widget.CardView
                    android:id="@+id/tokenRedPlayer2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#E2FF0020"
                    app:cardCornerRadius="50dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/app_red_token_color"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="25dp" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/containerYellowTokenPlayer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/app_pink_color">

                <androidx.cardview.widget.CardView
                    android:id="@+id/tokenYellowPlayer2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/app_yellow_token_color"
                    app:cardCornerRadius="50dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/app_yellow_token_color"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="25dp" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName">

            <FrameLayout
                android:id="@+id/containerTokenRedPlayer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/app_color_green">

                <androidx.cardview.widget.CardView
                    android:id="@+id/tokenRedPlayer1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#E2FF0020"
                    app:cardCornerRadius="50dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/app_red_token_color"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="25dp" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/containerYellowTokenPLayer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/app_gray_color">

                <androidx.cardview.widget.CardView
                    android:id="@+id/tokenYellowPlayer1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/app_yellow_token_color"
                    app:cardCornerRadius="50dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/app_yellow_token_color"
                        app:cardCornerRadius="50dp"
                        app:cardElevation="25dp" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/app_red_color"
            android:text="@string/play_txt"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#AFAFAF"
            android:text="@string/cancel_txt"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/button3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>